# KVDesk

./: .gitignore  CLAUDE.md  Makefile  README.md  events_fx_btc_dataset_2026-02-20_2026-03-05.csv  package-lock.json  package.json
.claude/: settings.local.json
.github/workflows/: release.yml
docs/: architecture.md  ci-cd.md  development.md  llm-loop.md  security.md  tools.md
locales/: en.json  ru.json
playwright-report/: index.html
public/locales/: en.json  ru.json
scripts/: setup_voice_server.sh  test-codex.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  main.rs  sandbox.rs
src/agent/: ipc-handlers.ts  main.ts  types.ts
src/agent/libs/: distill-service.ts  llm-providers.ts  mini-workflow.ts  prompt-loader.ts  runner-openai.ts  runner.ts  skills-loader.ts  skills-store.ts
src/agent/libs/auth/: index.ts  oauth.ts  pkce.ts  proxy-fetch.ts  store.ts  types.ts
src/shared/: mini-workflow-types.ts
src/sidecar/: main.ts
src/ui/: App.tsx  types.ts
src/ui/components/: DiffViewerModal.tsx  DistillPanel.tsx  EventCard.tsx  FileBrowser.tsx  FilePreviewPanel.tsx  PromptInput.tsx  SettingsModal.tsx  SkillsTab.tsx  StartSessionModal.tsx  WorkflowInputField.tsx
src/ui/platform/: tauri.ts
src/ui/render/: markdown.tsx
src/ui/store/: useAppStore.ts
tests/: diff-viewer-modal.spec.tsx  file-preview-panel.spec.tsx  llm-providers-ollama.spec.ts  mini-workflow.spec.ts  miniapp-ui-fixes.spec.ts  settings-modal-ollama.spec.tsx  settings-modal-viewer.spec.tsx  skills-loader.spec.ts  skills-store.spec.ts  skills-tab-skillsbd.spec.tsx
(+3 files in other folders)
